argo-projects/argo-workflows/resources/argo-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argo
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
